[package]
name = "yorchs-development-toolbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ydt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
cliclack = "0.3.1"
handlebars = { version = "5.1.2" }
serde = { version = "1.0.203", features = ["derive"] }
